--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "npm run serve"
+    "dev": "npm run serve",
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
