--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0",
-    "nuxt-sass-resources-loader": "^2.0.3"
+    "vuex": "^3.4.0"
+    
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
